:bug: make HTML field text visible in night mode
Fixes #147.

Problem:

In night mode, the default text color is set to white.
When it's rendered on the white background of form fields,
it is not visible to users.

Solution:

Explicitly set the color of form field text
in both night mode and day mode
so that it overrides the default text color.

--- a/app/assets/stylesheets/themes/_day.scss
+++ b/app/assets/stylesheets/themes/_day.scss
@@ -46,3 +46,4 @@ $table-header-border-color: shade($base-border-color, 25%);
 $disabled-field-background-color: shade($base-background-color, 5%);
 $fieldset-background-color: tint($base-border-color, 75%);
 $field-background-color: $white;
+$field-text-color: $dark-gray;
